# autosaver

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  autosaver  compile.sh  install.sh
.github/workflows/: release.yml  test.yml
.src/: main.rs
.src/cli/: mod.rs
.src/cli/actions/: backup.rs  help.rs  mod.rs
.src/core/: error.rs  mod.rs
.src/core/fs/: myers.rs
.src/core/parsers/: composite.rs  runner.rs
.src/core/profile/: composite.rs  mod.rs  runner.rs
autocompletions/: Cargo.toml
autocompletions/completions/: _autosaver  autosaver.bash  autosaver.fish
autocompletions/src/: main.rs
colors/: default  none  none_doc
config/distro/: kdelinux.conf
docs/: PROJECT_ARCHITECTURE.md  RELEASE_NEW_VERSION.md
scripts/: autosaver  install.sh  uninstall.sh
src/: errors.rs  fs.rs  lib.rs  log.rs  main.rs
src/cli/: act_run.rs  act_tree.rs  col.rs  ctx.rs  error.rs  flags.rs  inout.rs  mod.rs  out.rs  output.rs  perf.rs  prompt.rs  style.rs
src/cli/act/: mod.rs  tree.rs
src/cli/actions/: backup.rs  clear.rs  help.rs  mod.rs  run.rs  runner.rs  tree.rs  version.rs
src/cli/config/: col.rs  load_env.rs  load_prof.rs  mod.rs
src/core/: error.rs  errors.rs  fs.rs  mod.rs  module.rs  parsers.rs  profile.rs
src/core/fs/: mod.rs  myers.rs
src/core/parsers/: composite.rs  mod.rs  module.rs  runner.rs
src/core/profile/: composite.rs  mod.rs  module.rs  runner.rs
src/fs/: abs.rs  mod.rs  path.rs  pathstr.rs  rel.rs
src/prof/: composite.rs  mod.rs  module.rs  parser.rs  runner.rs
