[package]
name = "autosaver"
version = "1.1.0-dev"
edition = "2024"
default-run = "autosaver"

[profile.release]
opt-level = 3
lto = "fat"           # Takes longer, but GitHub Actions handles it
codegen-units = 1     # Slower compile, better runtime
panic = "abort"       # Smaller binary, no unwinding overhead
strip = true          # Remove debug symbols (users don't need them)

[profile.release.package."*"]
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"] }
owo-colors = "4.3.0"
